--- a/public/index.html
+++ b/public/index.html
@@ -72,8 +72,9 @@
             <!-- PUSH TO TALK -->
             <button id="talk-btn" class="btn btn-primary btn-large glow-effect">
                 <img src="assets/logo.svg" style="height: 30px; filter: invert(1); margin-right: 10px;">
-                <span>Hold to Speak</span>
+                <span>Tap to Speak</span>
             </button>
+
 
             <button class="btn btn-danger" onclick="app.leaveRoom()" style="margin-top: 10px;">Leave Room</button>
         </div>
